# hera_argo

./: .gitignore  README.md  Taskfile.yml  devbox.json
kubernetes/argo_workflows/: argo_server_patch.yaml  ingress.yaml  kustomization.yaml
kubernetes/cluster/base/: ClusterRoles.yaml  RoleBindings.yaml  ServiceAccounts.yaml  kustomization.yaml
kubernetes/cluster/overlays/k3d/: default_admin.yaml  kustomization.yaml
kubernetes/cluster/scripts/: argo_workflows.sh  k3d.sh
nix/docker/: Dockerfile
src/mlops/: main.py  pyproject.toml
src/mlops/mlops/: first_wf.py  second_wf.py
src/mlops_yaml/: first.yaml
