[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["J0hn-B <connect-wsman@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hera-workflows = "^5.14.3"
hera = "^5.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
